Fix long URLs breaking out of the box.

--- a/cmg/three-column-social-hub/css/styles.css
+++ b/cmg/three-column-social-hub/css/styles.css
@@ -214,6 +214,7 @@
 
 .content .content-body {
 	word-break: normal !important;
+	word-wrap: break-word;
 }
 
 /** iPad portrait & landscape */
